src/layouts/css/index.css
/* ... */
.building-blocks-wrapper {
  padding: 20px 20px 40px 20px;
}
.building-blocks-wrapper .Grid {
  flex-direction: column;
}
/* END: Building Blocks styles */

/* START: Footer styles */
.footer-menu-wrap {
  display: flex;
  flex-direction: row;
  justify-content: center;
  max-width: 70vw;
  margin: 0 auto;
  flex-wrap: wrap;
}
.button-wrap {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-bottom: 40px;
}

footer .button-wrap button {
  padding: 12px 20px 12px 22px;
  border-radius: 4px;
  color: #5c50ca;
  font-weight: 800;
}

footer .button-wrap .Grid-cell:first-child {
  text-align: right;
  margin-right: 20px;
}

footer .footer-menu-wrap a {
  color: #fff;
  font-size: 14px;
  text-decoration: none;
}


/* END: Footer styles */

.step-img {
    width: 105px;
}

.step-img img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    overflow: auto;
}

.step-wrap {
    padding-left: 10px;
    width: 100%;
}

.step-title {
    font-weight: 600;
    font-size: 1.2em;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
}

  .overview-list ol, ul{
      margin-left: 0;
      padding-right: 0;
  }

  .overview-list li {
      counter-increment: list-counter;
      list-style: inside;
      font-size: 16px;
  }

  .overview-list li::before {
      content: counter(list-counter);
      /* margin-right: 5px; */
      /* font-size: 80%; */
      background-color: #7958d8;
      color: #f9f9fa;
      font-weight: bold;
      font-size: .8em;
      padding: 2px 5px;
      border-radius: 18px;
      display: inline-block;
      width: 1.86em;
      margin-left: -1.8em;
      margin-top: .8em;
      margin-right: .3em;
      text-align: center;
      direction: rtl;
  }

  .overview-list1 ul{
      counter-increment: list-counter1 5;
  }

  .overview-list1 li {
      counter-increment: list-counter1;
      list-style: inside;
  }

  .overview-list1 li::before {
      content: counter(list-counter1) "a";
      background-color: #7958d8;
      color: #f9f9fa;
      font-weight: bold;
      font-size: .9em;
      padding: 2px 5px;
      border-radius: 18px;
      display: inline-block;
      width: 1.8em;
      margin-left: -1.8em;
      margin-top: .8em;
      margin-right: .3em;
      text-align: center;
      direction: rtl;
  }

  .overview-list2 ul{
      counter-increment: list-counter2 5;
  }

  .overview-list2 li {
      counter-increment: list-counter2;
      list-style: inside;
  }

  .overview-list2 li::before {
      content: counter(list-counter2) "b";
      background-color: #7958d8;
      color: #f9f9fa;
      font-weight: bold;
      font-size: .9em;
      padding: 2px 5px;
      border-radius: 18px;
      display: inline-block;
      width: 1.8em;
      margin-left: -1.8em;
      margin-top: .8em;
      margin-right: .3em;
      text-align: center;
      direction: rtl;
  }

  table {
    /*table-layout: fixed;*/
    width: 100%;
  }

  td {
    text-align: left;
  }

  .overview-list p {
    font-size: .9em;
  }

  img[alt="small-diag"] {
    padding: 20px;
    margin-left: auto;
    margin-right: auto;
    max-width: 550px;
    display: block;
  }

  img[alt="diag"] {
    padding: 20px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    max-width: 600px;
  }

  hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    height: 0;
    color: rgba(230, 224, 248);
    background-color: rgba(230, 224, 248);
    border-color: rgba(230, 224, 248);
    border-top: 1px solid;
  }

/*  Content Table Styles    */
.docSearch-content table {
  color: #5F5D68;
}
.docSearch-content thead tr {
  border-bottom: 1px solid #E5E5E5;
}
.docSearch-content tbody tr {
  border-bottom: 1px solid #E5E5E5;
}
.docSearch-content tbody tr:last-child {
  border-bottom: none;
}
.docSearch-content tbody tr:last-child td {
  padding-bottom: 20px;
}
.docSearch-content th {
  font-size: 12px;
  text-transform: uppercase;
  padding: 15px 10px;
  text-align: left;
}
.docSearch-content td {
  font-size: 16px;
  padding: 20px 0;
}
.docSearch-content tr td:first-child, .docSearch-content tr th:first-child  {
  padding-left: 20px;
}
.docSearch-content table code {
  overflow-wrap: break-word;
  white-space: pre-wrap;
}

/* Login Status */
.loginStatus {
  border-left: 1px solid #fff;
  display:inline-block;
  height: 30px;
  margin-top: 15px;
  position:relative;
}
.loginStatus div {
  margin-top: -15px;
}
.loginStatus .register-app {
  border: 2px solid #fff;
  border-radius: 5px;
  margin: 9px 4px;
  padding: 9px 14px;
}
.loginStatus .myapps-nav:after {
  content: url('../../images/caret-down.svg');
  position: relative;
  display: inline-block;
  top: -1px;
  left: 8px;
}
.loginStatus.open .myapps-nav:after {
  transform: rotate(180deg);
}
.loginStatus .myAppsDropdown {
  position:absolute;
  right: 10px;
  margin-top: -10px;
  box-shadow: 0 4px 4px 0 rgba(134, 134, 134, 0.25);
  background-color: #fff;
  text-align: left;
  min-width: 180px;
  list-style-type: none;
  z-index: 2;
}
.loginStatus li.logout {
  border-bottom: none;
}
.loginStatus li.logout a {
  color: #D63A59;
}
.loginStatus ul {
  padding: 0;
}
.loginStatus ul li {
  padding: 0;
  border-bottom: 1px solid #efefef;
  padding: 8px 10px 12px 10px;
  cursor: pointer;
}
.loginStatus ul li:before {
  background-image: none;
  bottom: auto;
  width: auto;
}
.loginStatus ul li a {
  color: #5C50CA;
  display: block;
  font-size: 14px;
  font-weight: 700;
  max-width: 12em;
  overflow: hidden;
  text-decoration: none;
  text-overflow: ellipsis;
}

/* Grid Classes */
*, :after, :before {
    box-sizing: border-box;
}
.Grid {
  display: flex;
}

.Grid-cell {
  flex: 1;
}

/* With gutters */
.Grid--gutters {
  margin: -1em 0 0 -1em;
}
.Grid--gutters > .Grid-cell {
  padding: 1em 25px 0 25px;
}
/* ... */

